2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/err.h (grub_err_t): Replace GRUB_ERR_BAD_GZIP_DATA with
	GRUB_ERR_BAD_COMPRESSED_DATA. All users updated.

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Uncompressed checksum support.

	* grub-core/commands/hashsum.c (options): Add option --uncompress.
	(check_list): New parameter uncompress.
	(grub_cmd_hashsum): Handle --uncompress.

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	Reintroduce testload.

	* grub-core/commands/minicmd.c (grub_rescue_cmd_testload) [0]: Moved
	from here ...
	* grub-core/commands/testload.c (grub_cmd_testload): ... here.
	(GRUB_MOD_INIT): New function.
	(GRUB_MOD_FINI): Likewise.
	* grub-core/Makefile.core.def (testload): New module.

2010-09-05  Szymon Janc <szymon@janc.net.pl>

	* grub-core/lib/posix_wrap/sys/types.h (bool): Transform into an enum.
	(uint8_t): New type.
	(uint16_t): Likewise.
	(uint32_t): Likewise.
	(uint64_t): Likewise.

2010-09-05  Szymon Janc <szymon@janc.net.pl>

	* include/grub/crypto.h (GRUB_MD_CRC32): New definition.

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/io/gzio.c (grub_gzio_open): Removed "transparent" parameter.
	Made static.
	(grub_gzfile_open): Removed. All users updated.
	(GRUB_MOD_INIT): New function.
	(GRUB_MOD_FINI): Likewise.
	* grub-core/kern/file.c (grub_file_filters_all): New variable.
	(grub_file_filters_enabled): Likewise.
	(grub_file_open): Handle filters.
	* grub-core/loader/i386/bsd.c (GRUB_MOD_INIT): Load gzio.
	* grub-core/normal/main.c (GRUB_MOD_INIT): Likewise.
	* include/grub/file.h (grub_file_filter_id_t): New type.
	(grub_file_filter_t): Likewise.
	(grub_file_filters_all): New extern variable.
	(grub_file_filters_enabled): Likewise.
	(grub_file_filter_register): New inline function.
	(grub_file_filter_unregister): Likewise.
	(grub_file_filter_disable): Likewise.
	(grub_file_filter_disable_compression): Likewise.
	* include/grub/gzio.h: Removed.
